import { BrowserRouter, Route } from "react-router-dom";
import { render, waitFor } from "@testing-library/react";

import Albums from "./Albums";
import React from "react";

//TODO: possibly move the Data consts to different files.

const mockResponseData = [
  {
    userId: 1,
    id: 1,
    title: "quidem molestiae enim",
  },
  {
    userId: 1,
    id: 2,
    title: "sunt qui excepturi placeat culpa",
  },
  {
    userId: 1,
    id: 3,
    title: "omnis laborum odio",
  },
  {
    userId: 1,
    id: 4,
    title: "non esse culpa molestiae omnis sed optio",
  },
  {
    userId: 1,
    id: 5,
    title: "eaque aut omnis a",
  },
  {
    userId: 1,
    id: 6,
    title: "natus impedit quibusdam illo est",
  },
  {
    userId: 1,
    id: 7,
    title: "quibusdam autem aliquid et et quia",
  },
  {
    userId: 1,
    id: 8,
    title: "qui fuga est a eum",
  },
  {
    userId: 1,
    id: 9,
    title: "saepe unde necessitatibus rem",
  },
  {
    userId: 1,
    id: 10,
    title: "distinctio laborum qui",
  },
];

it("displays the loader when loading", () => {
  const testRender = render(
    <BrowserRouter>
      <Route exact path="/" component={Albums} />
    </BrowserRouter>
  );
  expect(testRender).toMatchSnapshot();
});

it("renders correctly", async () => {
  const mockFetch = Promise.resolve({
    json: () => Promise.resolve(mockResponseData),
  });
  jest.spyOn(window, "fetch").mockImplementationOnce(() => mockFetch as any);
  const testRender = render(
    <BrowserRouter>
      <Route exact path="/" component={Albums} />
    </BrowserRouter>
  );
  await waitFor(() => testRender.getByTestId("testAlbum"));
  expect(testRender).toMatchSnapshot();
});
